// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Slide /> should render correctly with transitions. 1`] = `
<Slide
  align="center center"
  presenterStyle={Object {}}
  style={Object {}}
  transition={
    Array [
      "slide",
      "spin",
    ]
  }
  viewerScaleMode={false}
>
  <Styled(div)
    background="#eee"
    className="spectacle-slide"
    exportMode={undefined}
    innerRef={[Function]}
    printMode={undefined}
    styles={
      Object {
        "base": Object {},
        "presenter": Object {},
      }
    }
  >
    <div
      className="spectacle-slide css-1w0uyvd e6yds240"
    >
      <Styled(div)
        align="center center"
        overviewMode={undefined}
      >
        <div
          className="css-13fut6c e6yds241"
        >
          <Styled(div)
            className=" spectacle-content"
            height={undefined}
            innerRef={[Function]}
            margin={undefined}
            overviewMode={undefined}
            style={Object {}}
            styles={
              Object {
                "context": Object {},
              }
            }
            width={undefined}
          >
            <div
              className=" spectacle-content css-121oawa e6yds242"
              height={undefined}
              style={Object {}}
              width={undefined}
            >
              <div>
                Slide Content
              </div>
            </div>
          </Styled(div)>
        </div>
      </Styled(div)>
    </div>
  </Styled(div)>
</Slide>
`;

exports[`<Slide /> should render correctly without transitions. 1`] = `
<Slide
  align="center center"
  presenterStyle={Object {}}
  style={Object {}}
  viewerScaleMode={false}
>
  <Styled(div)
    background="#eee"
    className="spectacle-slide"
    exportMode={undefined}
    innerRef={[Function]}
    printMode={undefined}
    styles={
      Object {
        "base": Object {},
        "presenter": Object {},
      }
    }
  >
    <div
      className="spectacle-slide css-1w0uyvd e6yds240"
    >
      <Styled(div)
        align="center center"
        overviewMode={undefined}
      >
        <div
          className="css-13fut6c e6yds241"
        >
          <Styled(div)
            className=" spectacle-content"
            height={undefined}
            innerRef={[Function]}
            margin={undefined}
            overviewMode={undefined}
            style={Object {}}
            styles={
              Object {
                "context": Object {},
              }
            }
            width={undefined}
          >
            <div
              className=" spectacle-content css-121oawa e6yds242"
              height={undefined}
              style={Object {}}
              width={undefined}
            >
              <div>
                Slide Content
              </div>
            </div>
          </Styled(div)>
        </div>
      </Styled(div)>
    </div>
  </Styled(div)>
</Slide>
`;
